Fix Method section styling.
I was using extra CSS selector specificity to target certain elements for
spacing. It was unnecessarily complicated.
Instead, I've wrapped sections in section tags and used simpler selectors.

--- a/index.html
+++ b/index.html
@@ -280,55 +280,73 @@
 
                     </q>
 
-                    <p>
+                    <section>
 
-                        In order to learn math or physics, you have to put in the practice time. There is only so much time in the day, though, and this class is one of many things you&#39;re doing. I help students learn and apply their course material so their studying is productive and they are prepared for test day.
+                        <p>
 
-                    </p>
+                            In order to learn math or physics, you have to put in the practice time. There is only so much time in the day, though, and this class is one of many things you&#39;re doing. I help students learn and apply their course material so their studying is productive and they are prepared for test day.
 
-                    <h2>Get the benefit of experience</h2>
+                        </p>
 
-                    <p>
+                    </section>
 
-                        If you have specific questions, great &mdash; let's start there. Often, however, students don&#39;t know what they don&#39;t know. Working with an experienced teacher can really be a time-saver. I&#39;ve worked with a number of students who wanted help with calculus but struggled with algebra, for example. Algebra needs to be a reliable tool when you're trying to do calculus so we began by sharpening that tool. Once the algebra was in place the calculus became understandable; without the algebra the calculus was not going to happen.
+                    <section>
 
-                    </p>
+                        <h2>Get the benefit of experience</h2>
 
-                    <p>
-                        On the other hand, course material has inherent difficulty. What does a given mathematical notation really mean? In what situations do you use combinations vs. permutations in counting, such as in a probability and statistics class? There is no rote procedure at all for something like estabilishing a limit via the epsilon-delta definition in calculus or like most things in an upper-level class, such as real analysis or abstract algebra.
-                    </p>
+                        <p>
 
-                    <p>
+                            If you have specific questions, great &mdash; let's start there. Often, however, students don&#39;t know what they don&#39;t know. Working with an experienced teacher can really be a time-saver. I&#39;ve worked with a number of students who wanted help with calculus but struggled with algebra, for example. Algebra needs to be a reliable tool when you're trying to do calculus so we began by sharpening that tool. Once the algebra was in place the calculus became understandable; without the algebra the calculus was not going to happen.
 
-                        I have been a student, I earned my bachelor&#39;s and master&#39;s degrees in math and my bachelor&#39;s in physics, I taught math for several years as a graduate TA at Texas A&amp;M and LSU, and I have tutored students since 2011. I know the material and I take pride in teaching it well.
+                        </p>
 
-                    </p>
+                        <p>
+                            On the other hand, course material has inherent difficulty. What does a given mathematical notation really mean? In what situations do you use combinations vs. permutations in counting, such as in a probability and statistics class? There is no rote procedure at all for something like estabilishing a limit via the epsilon-delta definition in calculus or like most things in an upper-level class, such as real analysis or abstract algebra.
+                        </p>
 
+                        <p>
 
+                            I have been a student, I earned my bachelor&#39;s and master&#39;s degrees in math and my bachelor&#39;s in physics, I taught math for several years as a graduate TA at Texas A&amp;M and LSU, and I have tutored students since 2011. I know the material and I take pride in teaching it well.
 
-                    <h2>What do you want to do?</h2>
+                        </p>
 
-                    <h3>Get help to excel in your course?</h3>
+                    </section>
 
-                    <p>
+                    <section>
 
-                        Don&#39;t wait! Your course material builds on itself so the sooner we begin, the better you will understand your entire course. Through regular tutoring sessions I&#39;ll help you build a proper foundation of knowledge, use concepts to solve problems, and quickly recognize which strategy will solve a problem. Homework and quizzes will be opportunities to secure a portion of your grade and we will ensure that you&#39;re ready to prove your understanding on test day.
+                        <h2>What do you want to do?</h2>
 
-                    </p>
+                        <section>
 
-                    <h3>Review for your test?</h3>
+                            <h3>Get help to excel in your course?</h3>
 
-                    <p>
+                            <p>
 
-                        Maybe you&#39;ve done your studying and want a review &frasl; Q&amp;A session. Let&#39;s do it!<br/>
-                        To prove your understanding on test day, you must be able to read a problem and immediately begin writing the solution. This requires knowing all terms, theorems, and formulas &frasl; algorithms; quickly recognizing which ones will solve a problem; and applying them quickly and correctly.
+                                Don&#39;t wait! Your course material builds on itself so the sooner we begin, the better you will understand your entire course. Through regular tutoring sessions I&#39;ll help you build a proper foundation of knowledge, use concepts to solve problems, and quickly recognize which strategy will solve a problem. Homework and quizzes will be opportunities to secure a portion of your grade and we will ensure that you&#39;re ready to prove your understanding on test day.
 
-                    </p>
+                            </p>
 
-                    <p>
-                        Take advantage of the reviews your professor and TA provide and then work with me if you need more help.  Neither they nor I can develop your understanding for you; you&#39;re going to have to put in the practice time.  If you need explanation or help with problem-solving strategies, though, I&#39;d like to work with you. There is only so much time in the day; I&#39;ll set you on the right track so your study time is productive.
+                          </section>
 
-                    </p>
+                          <section>
+
+                            <h3>Review for your test?</h3>
+
+                            <p>
+
+                                Maybe you&#39;ve done your studying and want a review &frasl; Q&amp;A session. Let&#39;s do it!<br/>
+                                To prove your understanding on test day, you must be able to read a problem and immediately begin writing the solution. This requires knowing all terms, theorems, and formulas &frasl; algorithms; quickly recognizing which ones will solve a problem; and applying them quickly and correctly.
+
+                            </p>
+
+                            <p>
+                                Take advantage of the reviews your professor and TA provide and then work with me if you need more help.  Neither they nor I can develop your understanding for you; you&#39;re going to have to put in the practice time.  If you need explanation or help with problem-solving strategies, though, I&#39;d like to work with you. There is only so much time in the day; I&#39;ll set you on the right track so your study time is productive.
+
+                            </p>
+
+                          </section>
+
+                    </section>
 
                 </div>
 
