Revise wording on note about no contact form.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </ul>
 
             <p class="NoFormExplanation">
-                Note: This area used to be a contact form. Typical communication with a student was:<br />Single email exchange or phone call &rarr;<br /><span class="tabbed1">Recurring texts and/or phone calls</span><br />I don&#39;t know that the form provided much value so this is a trial in doing without it.
+                Note: This area used to be a contact form. Typical communication with a student was:<br />Single email exchange or phone call &rarr;<br /><span class="tabbed1">Recurring texts and/or phone calls</span><br />I don&#39;t know how much value the form provided so this is a trial in doing without it.
             </p>
 
         </div>
