Update google-calendar-iframe failure text.

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <li>name</li>
                 <li>course name <span class="ExampleInput">(e.g., calculus I)</span></li>
                 <li>topic <span class="ExampleInput">(e.g., limits)</span></li>
-                <li>preferred meeting time and place<br /><span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you&#39;re 18+ or are a high school student and have a parent/guardian present, etc
-                    .)</span></li>
+                <li>preferred meeting time and place<br />
+                    <span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you&#39;re 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
             </ul>
 
             <p class="NoFormExplanation">
@@ -187,11 +187,11 @@
 
         <div id=IframeFailurePlaceholder>
 
-            <h2>Apparently, the Google calendar with my availability isn&#39;t displaying.</h2>
+            <h3>Apparently, the Google calendar with my availability isn&#39;t displaying :(</h3>
 
             <p>
 
-                No problem. I&#39;m available plenty! Just enter your preferred date and time as you complete the form to the left. If I already have a client at your preferred time, then we&#39;ll figure out an alternate time when I contact you, following your form submission.
+                No problem &mdash; I&#39;m available plenty! Just include your preferred date and time. If I already have a client then, we&#39;ll figure out an alternate time.
 
             </p>
 
