Add PayPal email address.

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
 
                             </p>
 
-                          </section>
+                        </section>
 
-                          <section>
+                        <section>
 
                             <h3>Review for your test?</h3>
 
@@ -344,7 +344,7 @@
 
                             </p>
 
-                          </section>
+                        </section>
 
                     </section>
 
@@ -492,7 +492,7 @@
 
                         <p>
 
-                            I accept cash, checks, and <a href="https://www.paypal.com/" target=_blank>PayPal</a>.
+                            I accept cash, checks, and <a href="https://www.paypal.com/" target=_blank>PayPal to spellman.cort@gmail.com</a>.
 
                         </p>
 
